# turtlebot_create_desktop

./: CHANGELOG.rst  README.md  stack.xml
create_dashboard/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  setup.py
create_dashboard/plugins/: plugin.xml
create_dashboard/scripts/: create_dashboard  turtlebot_dashboard
create_dashboard/src/create_dashboard/: battery.py  breaker.py  dashboard.py
create_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
create_gazebo_plugins/include/turtlebot_plugins/: gazebo_ros_create.h
create_gazebo_plugins/src/: gazebo_ros_create.cpp
turtlebot_create_desktop/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
