<?xml version="1.0"?>
<package>
  <name>turtlebot_create_desktop</name>
  <version>2.1.0</version>
  <description>Catkin meta-package for turtlebot_create_desktop</description>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_create_desktop</url>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>create_dashboard</run_depend>
  <run_depend>create_gazebo_plugins</run_depend>

  <export>
    <metapackage/>
  </export>
</package>